Config changes + server config added
ok

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -5,11 +5,6 @@ Barbeque's Delight
 Berries And Cherries
 ButchersDelight
 Comforts
-Create
-Create Big Cannons
-Create: Bells & Whistles
-Create: Interiors
-Create: Steam 'n' Rails
 Drink Beer Refill
 Easy NPC
 Enemy Expansion
@@ -28,7 +23,15 @@ Sooty Chimneys
 Spice of Life Onion
 Supplementaries
 Tool Belt
-Traveler's Backpack
 Vintage Delight
 Wares
 Weather2
+AstikorCarts Redux
+BeansBackpacks
+Chipped
+Doggy Talents Next
+Fishermens Trap
+Let Fish Love
+Paraglider
+RealisticForging
+Small Ships
