--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -13,35 +13,6 @@ barbequesdelight:grilling
 barbequesdelight:skewering
 berries_and_cherries:b_press_cherry
 berries_and_cherries:bpress
-create:automatic_brewing
-create:automatic_packing
-create:automatic_shaped
-create:automatic_shapeless
-create:block_cutting
-create:crushing
-create:deploying
-create:draining
-create:fan_blasting
-create:fan_haunting
-create:fan_smoking
-create:fan_washing
-create:item_application
-create:mechanical_crafting
-create:milling
-create:mixing
-create:mystery_conversion
-create:packing
-create:pressing
-create:sandpaper_polishing
-create:sawing
-create:sequenced_assembly
-create:spout_filling
-create:wood_cutting
-createbigcannons:built_up_heating
-createbigcannons:cannon_casting
-createbigcannons:drill_boring
-createbigcannons:incomplete_cannon_blocks
-createbigcannons:melting
 drinkbeer:brewing
 farmersdelight:cooking
 farmersdelight:cutting
@@ -52,3 +23,11 @@ jei:information
 sootychimneys:soot_covering
 sootychimneys:soot_scraping
 vintagedelight:fermenting
+minecraft:alchemy_bench
+minecraft:botanist_workbench
+minecraft:carpenters_table
+minecraft:glassblower
+minecraft:loom_table
+minecraft:mason_table
+minecraft:tinkering_table
+fishermens_trap:fishtrap_fishing
