--- a/config/cookyourfood-client.toml
+++ b/config/cookyourfood-client.toml
@@ -1,3 +1,3 @@
 #Show warning tooltips on items that would cause food poisoning.
-"Show warning tooltips on items" = false
+"Show warning tooltips on items" = true
 
