--- a/config/guardvillagers-common.toml
+++ b/config/guardvillagers-common.toml
@@ -32,7 +32,7 @@
 	#Range: -999.9000244140625 ~ 999.0
 	"Chance to drop equipment" = 100.0
 	#This makes Guards run from polar bears, as anyone with common sense would.
-	"Have Guards have some common sense?" = false
+	"Have Guards have some common sense?" = true
 	#This lets Guards open doors.
 	"Have Guards open doors?" = true
 	#This will make guards raise their shields all the time, on default they will only raise their shields under certain conditions
@@ -48,7 +48,7 @@
 	"Guard health regeneration amount" = 1.0
 	"Allow guard arrows to damage villagers, iron golems, or other guards? The i-frames will still be shown for them but they won't lose any health if this is set to false" = true
 	"Allow players to give guards stuff only if they have the hero of the village effect?" = false
-	"Allow players to set guard patrol points only if they have hero of the village" = false
+	"Allow players to set guard patrol points only if they have hero of the village" = true
 	#Range: > -2147483648
 	"Minimum reputation requirement for guards to give you access to their inventories" = 15
 	#Range: -500.0 ~ 900.0
@@ -57,7 +57,7 @@
 	"Guard speed" = 0.5
 	#Range: 0.0 ~ 900.0
 	"Guard follow range" = 20.0
-	"Have guards only follow the player if they have hero of the village?" = true
+	"Have guards only follow the player if they have hero of the village?" = false
 	#Range: -9999 ~ 9999
 	"How low of a reputation of a player should have to be instantly aggroed upon by guards and golems?" = -100
 
