--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -7,7 +7,6 @@ ButchersDelight
 Comforts
 Drink Beer Refill
 Easy NPC
-Enemy Expansion
 Epic Fight
 Epic Knights Mod
 Farmer's Delight
@@ -35,3 +34,4 @@ Let Fish Love
 Paraglider
 RealisticForging
 Small Ships
+Bo's Easy NPC: Epic Fight
