--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -4,7 +4,6 @@ Aquaculture Delight
 Barbeque's Delight
 Berries And Cherries
 ButchersDelight
-Comforts
 Drink Beer Refill
 Easy NPC
 Epic Fight
@@ -13,25 +12,27 @@ Farmer's Delight
 Fruits Delight
 Goblin's Tyranny
 Guard Villagers
-Handcrafted
 Illager Invasion
 Immersive Weathering
 Serene Seasons
 Shifu Epic Fight Skill Recipe
 Sooty Chimneys
 Spice of Life Onion
-Supplementaries
 Tool Belt
 Vintage Delight
 Wares
 Weather2
 AstikorCarts Redux
 BeansBackpacks
-Chipped
 Doggy Talents Next
 Fishermens Trap
 Let Fish Love
-Paraglider
 RealisticForging
 Small Ships
 Bo's Easy NPC: Epic Fight
+Breezy
+Days in the Middle Ages
+Fantasy's Furniture
+PlayTics Deco
+Sleep Tight
+meds and herbs
