--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -1,7 +1,6 @@
 Minecraft
 Aquaculture 2
 Aquaculture Delight
-Barbeque's Delight
 Berries And Cherries
 ButchersDelight
 Drink Beer Refill
@@ -23,9 +22,6 @@ Vintage Delight
 Wares
 AstikorCarts Redux
 BeansBackpacks
-Doggy Talents Next
-Fishermens Trap
-Let Fish Love
 RealisticForging
 Small Ships
 Bo's Easy NPC: Epic Fight
@@ -35,3 +31,4 @@ Fantasy's Furniture
 PlayTics Deco
 Sleep Tight
 meds and herbs
+Spelunker's Charm
